# Paperbaum

./: .gitignore  LICENSE  README.md
backend/: package-lock.json  package.json  server.js
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js  layout.jsx  page.jsx  page.module.css
frontend/app/components/: AddLeaf.js  FileUpload.js  MerkleLeaves.js  NavBar.js  PaperList.js  navbar.module.css
frontend/app/hooks/: useSubstrate.js
frontend/app/upload/: dashboard.module.css  page.jsx  uploadpage.module.css
parachain/: Cargo.toml  README.md
parachain/pallets/pallet-papermgmt/: Cargo.toml
parachain/pallets/pallet-papermgmt/src/: lib.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: lib.rs
